--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<div class="item mb-2" style="padding-left: 10px;">
 										<div class="item-heading row align-items-end mb-2">
 														<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-																<strong>Post-doctoral Researcher </strong><br>
+																<strong>Postdoctoral Researcher </strong><br>
 																The Wharton School and the School of Arts and Sciences, <br>
 																University of Pennsylvania
 														</div>
@@ -299,6 +299,9 @@
                         </div>
                     </div>
                     <div class="item-content" style="padding-left: 10px;">
+											<p><strong>"Extending Lewin’s Field Theory: Contemporary Approaches to Person X Ecology"</strong> (February, 2026).
+												Society for Personality and Social Psychology Conference, Chicago, Illinois.
+												<br/>Speakers: <strong>Ahra Ko (Chair)</strong>, Michael Varnum, Mark Schaller, Keelah Williams.</p>
 										<p><strong>"From Walkability to Pathogens to Seasonality: Multilevel Influences of Ecology on Psychological and Cultural Dynamics"</strong> (October, 2024).
 											Society of Experimental Social Psychology, Santa Fe, New Mexico.
 											<br/>Speakers: <strong>Ahra Ko (Chair)</strong>, Shige Oishi, Mark Schaller, Michael Varnum.</p>
