--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div class="row align-items-center">
 						<div class="col-12 col-md-4 col-xl-3 text-center">
 						    <img class="resume-profile-image rounded mx-auto"
-								src="assets/images/Ahra Full 400.jpg"
+								src="assets/images/Ahra_2025.jpg"
 								alt="image-thumbnail">
 						</div>
 
