--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
+											<p>14. <strong>Ko, A.</strong> Kenrick, D. T., Becker, D. V., & Varnum, M. E. W. (Invited for Revision)
+												<strong>Fundamental social motives in men and women across 42 societies</strong>.
+													<i>Proceedings of the Royal Society B: Biological Sciences</i>. 
+											</p>
 											<p>13. <strong>Ko, A.</strong> & Neuberg, S. L. (2025)
 												<strong>Ecological affordances across life stages: An affordance management framework</strong>.
 													<i>Behavioral and Brain Sciences</i>. [Target article]
