--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 									<ul class="list-unstyled resume-lab-list">
 										<span class="text-muted">
 											<li>Angela L. Duckworth</li>
-											<li>Katherine L. Milkman</span></li>
+											<li>Katy L. Milkman</span></li>
 										</ul>
 									</div><!--//item-->
 								<div class="item">
