--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 											<p>11. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2024)
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
 													A longitudinal investigation of functional flexibility</strong>.
-													<i>American Psychologist</i>.
+													<i>American Psychologist, 80</i>(2), 193–205.
 												<a href="https://doi.org/10.1037/amp0001318" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</a>
 												<span style="display: block; margin-left: 25px; color: #990000; font-weight: bold;"> Postdoctoral Award
