--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
-											<p>14. <strong>Ko, A.</strong> Kenrick, D. T., Becker, D. V., & Varnum, M. E. W. (In press)
+											<p>14. <strong>Ko, A.</strong>, Kenrick, D. T., Becker, D. V., & Varnum, M. E. W. (In press)
 												<strong>Fundamental social motives in men and women across 42 societies</strong>.
 													<i>Proceedings of the Royal Society B: Biological Sciences</i>. 
 											</p>
