--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 										<p><strong>"From Walkability to Pathogens to Seasonality: Multilevel Influences of Ecology on Psychological and Cultural Dynamics"</strong> (October, 2024).
 											Society of Experimental Social Psychology, Santa Fe, New Mexico.
 											<br/>Speakers: <strong>Ahra Ko (Chair)</strong>, Shige Oishi, Mark Schaller, Michael Varnum.</p>
-										<p><strong>“Human values: An integrative perspective”</strong> (October, 2023).
+										<p><strong>“Human Values: An Integrative Perspective”</strong> (October, 2023).
 											Society of Experimental Social Psychology, Madison, Wisconsin.
 											<br/>Speakers: <strong>Ahra Ko</strong>, Daniel Sznycer, Joshua Jackson, Igor Grossmann.</p>
 										<p><strong>"COVID, Disease Psychology, and Politics"</strong> (June, 2022).
